--- a/symposium.bib
+++ b/symposium.bib
@@ -1,4 +1,11 @@
 
+@book{Coello_2013,
+author={Coello, A. Coello Coello  and Lamont, Gary B. and Van Veldhuizen, David A.},
+title={Evolutionary Algorithms for Solving Multi-Objective Problems},
+isbn={9781475751840},
+series={Genetic Algorithms and Evolutionary Computation},
+year={2013},
+publisher={Springer US}}
 @misc{popovici2012coevolutionary,
   title={Coevolutionary Principles.},
   author={Popovici, Elena and Bucci, Anthony and Wiegand, R Paul and De Jong, Edwin D},
