As sent to Professors Hernán and Gilberto.
- First full rewrite of all sections to create original contents for JPN SEC Symposium 2025.

--- a/symposium.bib
+++ b/symposium.bib
@@ -137,6 +137,43 @@ publisher={Springer US}}
   KEYWORDS="FlipIt; coevolution; simultaneous continuous games; multivariable multiobjective games; Game Theory"
 }
 
+@inproceedings{leite2024shinetsu,
+  address = {Niigata, Japan},
+  title = {Mutation Distance Optimization for Co-Evolutionary Estimation of {Nash} {Equilibria} in {FlipIt} Games},
+  language = {en},
+  booktitle = {IEICE Shinetsu Branch Conference 2024},
+  author = {Leite, Rui and Aguirre, Hernán and Tanaka, Kiyoshi},
+  publisher = {Institute of Electronics, Information and Communication Engineers},
+  year = {2024},
+}
+
+@INPROCEEDINGS{leite2024jpnsec,
+  author={Leite, Rui and Aguirre, Hernan and Tanaka, Kiyoshi},
+  title={An Evolutionary-Computing Based Framework for Approaching Simultaneous Continuous Games with Infinite Solutions},
+  booktitle={18th Evolutionary Computation Symposium 2024},
+  address={Shirahama, Japan},
+  publisher={Society for Evolutionary Computation},
+  year={2024},
+  pages={117--124}
+}
+
+@inproceedings{leite2025gecco,
+  author = {Leite, Rui and Aguirre, Hernan and Tanaka, Kiyoshi},
+  title = {Key Insights into Estimating Nash Equilibria in Simultaneous Continuous Multiplayer Games Using Coevolutionary Algorithms},
+  year = {2025},
+  isbn = {9798400714658},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3712256.3726373},
+  doi = {10.1145/3712256.3726373},
+  booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference},
+  pages = {916–924},
+  numpages = {9},
+  keywords = {multi-objective optimization, game theory, coevolution, mutation operators, security, cybersecurity and defense},
+  location = {NH Malaga Hotel, Malaga, Spain},
+  series = {GECCO '25}
+}
+
 @article{dijk2013flipit,
   title={{FlipIt}: The game of ``stealthy takeover''},
   author={Van Dijk, Marten and Juels, Ari and Oprea, Alina and Rivest, Ronald L},
@@ -183,6 +220,21 @@ publisher={Springer US}}
 	doi = {https://doi.org/10.1016/j.swevo.2011.10.001}}
 	
 @ARTICLE{Deb_2002, author={Deb, Kalyanmoy and Pratap, Amrit and Agarwal, Samir and Meyarivan, T.},  journal={IEEE Transactions on Evolutionary Computation},   title={A fast and elitist multiobjective genetic algorithm: NSGA-II},   year={2002},  volume={6},  number={2},  pages={182-197},  doi={10.1109/4235.996017}}
+
+@inproceedings{lamont1999GD,
+  title={Multiobjective evolutionary algorithms: classifications, analyses, and new innovations},
+  author={Gary B. Lamont and David A. van Veldhuizen},
+  year={1999},
+  url={https://api.semanticscholar.org/CorpusID:61080988}
+}
+
+@inproceedings{coello2004IGD,
+  title={A Study of the Parallelization of a Coevolutionary Multi-objective Evolutionary Algorithm},
+  author={Carlos A. Coello Coello and Margarita Reyes Sierra},
+  booktitle={Mexican International Conference on Artificial Intelligence},
+  year={2004},
+  url={https://api.semanticscholar.org/CorpusID:1369979}
+}
 
 @article{Muhammad_2013,
 	author = {Muhammad Asif Jan and Rashida Adeeb Khanum},
