--- a/symposium.bib
+++ b/symposium.bib
@@ -219,7 +219,7 @@ publisher={Springer US}}
 	year = {2011},
 	doi = {https://doi.org/10.1016/j.swevo.2011.10.001}}
 	
-@ARTICLE{Deb_2002, author={Deb, Kalyanmoy and Pratap, Amrit and Agarwal, Samir and Meyarivan, T.},  journal={IEEE Transactions on Evolutionary Computation},   title={A fast and elitist multiobjective genetic algorithm: NSGA-II},   year={2002},  volume={6},  number={2},  pages={182-197},  doi={10.1109/4235.996017}}
+@ARTICLE{Deb_2002, author={Deb, Kalyanmoy and Pratap, Amrit and Agarwal, Samir and Meyarivan, T.},  journal={IEEE Transactions on Evolutionary Computation},   title={A fast and elitist multiobjective genetic algorithm: {NSGA-II}},   year={2002},  volume={6},  number={2},  pages={182-197},  doi={10.1109/4235.996017}}
 
 @inproceedings{lamont1999GD,
   title={Multiobjective evolutionary algorithms: classifications, analyses, and new innovations},
